worked on ui pages and links

--- a/caterer.html
+++ b/caterer.html
@@ -59,12 +59,12 @@
                 <div class="menuBoard">
                     <div class="manageMenu">
                         <img src="./assets/images/menu2.png" alt="manage menu">
-                        <p>Manage Menu<span> > </span></p>
+                        <a href="managemenu.html"><p>Manage Menu<span> > </span></p></a>
                     </div>
 
                     <div class="manageMeals">
                         <img src="./assets/images/turkey.png" alt="manage menu">
-                        <p>Manage Meals<span> > </span></p>
+                        <a href="managemeals.html"><p>Manage Meals<span> > </span></p></a>
                     </div>
                     
                 </div>
