--- a/login.html
+++ b/login.html
@@ -18,10 +18,8 @@
                     <input type="checkbox" id="nav-toggle" class="nav-toggle">
                 <nav>
                   <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Restaurants</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="#" id="login">Login</a></li>
+                    <li><a href="#" id="customer">Customer</a></li>
+                    <li><a href="caterer.html" id="restaurant">Restaurant</a></li>
                   </ul>
                 </nav>
                 <label for="nav-toggle" class="nav-toggle-label">
@@ -32,7 +30,7 @@
 
         <section class="loginSection">
                 <div class="loginForm">
-                    <form action="" class="login">
+                    <form action="loggedin.html" class="login">
                         <h2 class="formHeading">
                             Buka.ng
                         </h2>
