--- a/loggedin.html
+++ b/loggedin.html
@@ -7,7 +7,6 @@
     <title>Buka</title>
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
@@ -19,7 +18,8 @@
                 <nav>
                   <ul>
                     <li><a href="#">Restaurants</a></li>
-                    <li><a href="login.html" id="login">Login</a></li>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="index.html" id="login">Logout</a></li>
                   </ul>
                 </nav>
                 <label for="nav-toggle" class="nav-toggle-label">
