--- a/signup.html
+++ b/signup.html
@@ -18,36 +18,14 @@
                     <input type="checkbox" id="nav-toggle" class="nav-toggle">
                 <nav>
                   <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Restaurants</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="login.html" id="login">Login</a></li>
+                    <li><a href="#" id="customer">Customer</a></li>
+                    <li><a href="#" id="restaurant">Restaurant</a></li>
                   </ul>
                 </nav>
                 <label for="nav-toggle" class="nav-toggle-label">
                   <span></span>
                 </label>
             </header>
-        <!-- TEST -->
-
-        <!-- Header section begins here -->
-        <!-- <header class="headerSection">
-            <nav class="mainNavbar">
-                <div>
-                    <h1 class="navbarBrand">
-                        Buka.ng
-                    </h1>
-                </div>
-                <div class="navBarMenu">
-                        <a href="index.html">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Menu</a>
-                        <a href="#">Contact</a>
-                        <!-- <a href="login.html" id="login">Login</a> -->
-                    </ul>
-                </div>
-            </nav>
-        </header> -->
         <!-- end of header section -->
 
         <section class="signUpSection">
