--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
                 <nav>
                   <ul>
                     <li><a href="#" id="customer">Customer</a></li>
-                    <li><a href="#" id="restaurant">Restaurant</a></li>
+                    <li><a href="caterer.html" id="restaurant">Restaurant</a></li>
                   </ul>
                 </nav>
                 <label for="nav-toggle" class="nav-toggle-label">
@@ -31,7 +31,7 @@
         <section class="signUpSection">
                 <div class="signUpCard">
                     <div class="signUpForm">
-                        <form action="" class="signUp">
+                        <form action="login.html" class="signUp">
                             <label for="firstname">
                                 <input type="text" class="firstname" placeholder="firstname">
                             </label>
