--- a/caterer.html
+++ b/caterer.html
@@ -17,10 +17,7 @@
                     <input type="checkbox" id="nav-toggle" class="nav-toggle">
                 <nav>
                   <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Restaurants</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="login.html" id="login">Login</a></li>
+                    <li><a href="index.html" id="login">Logout</a></li>
                   </ul>
                 </nav>
                 <label for="nav-toggle" class="nav-toggle-label">
