--- a/managemenu.html
+++ b/managemenu.html
@@ -16,9 +16,27 @@
         <a href="caterer.html"><h2>Go back to dashboard <i class="fas fa-columns"></i></h2></a>
     </div>
 
-    <section class="addmeal-head">
-        <form action="">
-            
+    <section class="addmenu-head">
+        <form action="" class="addmenu-form">
+            <select name="" id="" class="select">
+                <option value="Select meal" selected>select meal</option>
+                <option value="1">Eba and egusi</option>
+                <option value="2">Pounded Yam and efo-riro</option>
+                <option value="4">Jollof rice and Chiken</option>
+                <option value="5">Chiken curry</option>
+                <option value="6">Ofada and ayamase stew</option>
+            </select>
+
+            <select name="" id=""  class="select">
+                <option value="" selected>select category</option>
+                <option value="breakfast">Breakfast</option>
+                <option value="lunch">Lunch</option>
+                <option value="dinner">Dinner</option>
+            </select>
+
+            <input type="date" name="" id="">
+
+            <input type="submit" value="add menu">
         </form>
     </section>
 
@@ -31,8 +49,7 @@
                     <div class="mealDetails">
                         <h4><b>Plantain and egg</b></h4> 
                         <p>&#8358; 1300</p>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
                 </div>
 
@@ -42,8 +59,7 @@
                         <h4><b>Ofada Rice</b></h4> 
                         <p>&#8358; 1200</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -52,8 +68,7 @@
                         <h4><b>Fried Rice</b></h4> 
                         <p>&#8358; 1400</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -62,8 +77,7 @@
                         <h4><b>Fried Rice</b></h4> 
                         <p>&#8358;750</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -72,8 +86,7 @@
                         <h4><b>Ofada and Plantain</b></h4> 
                         <p>&#8358; 1800</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -82,8 +95,7 @@
                             <h4><b>Spaghetti Chicken</b></h4> 
                             <p>&#8358; 650</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -92,8 +104,7 @@
                             <h4><b>Fufu With Egusi Soup</b></h4> 
                             <p>&#8358; 1100</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -102,8 +113,7 @@
                             <h4><b>Fufu with Eforiro</b></h4> 
                             <p>&#8358; 900</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -112,8 +122,7 @@
                             <h4><b>Spicy Moi Moi</b></h4> 
                             <p>&#8358; 650</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -122,8 +131,7 @@
                             <h4><b>chicken-sharwama</b></h4> 
                             <p>&#8358; 1300</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
             </div>
 
@@ -135,8 +143,7 @@
                     <div class="mealDetails">
                         <h4><b>Plantain and egg</b></h4> 
                         <p>&#8358; 1300</p>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
                 </div>
 
@@ -146,8 +153,7 @@
                         <h4><b>Ofada Rice</b></h4> 
                         <p>&#8358; 1200</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -156,8 +162,7 @@
                         <h4><b>Fried Rice</b></h4> 
                         <p>&#8358; 1400</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -166,8 +171,7 @@
                         <h4><b>Fried Rice</b></h4> 
                         <p>&#8358;750</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -176,8 +180,7 @@
                         <h4><b>Ofada and Plantain</b></h4> 
                         <p>&#8358; 1800</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -186,8 +189,7 @@
                             <h4><b>Spaghetti Chicken</b></h4> 
                             <p>&#8358; 650</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -196,8 +198,7 @@
                             <h4><b>Fufu With Egusi Soup</b></h4> 
                             <p>&#8358; 1100</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -206,8 +207,7 @@
                             <h4><b>Fufu with Eforiro</b></h4> 
                             <p>&#8358; 900</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
             </div>
 
@@ -219,8 +219,7 @@
                     <div class="mealDetails">
                         <h4><b>Plantain and egg</b></h4> 
                         <p>&#8358; 1300</p>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
                 </div>
 
@@ -230,8 +229,7 @@
                         <h4><b>Ofada Rice</b></h4> 
                         <p>&#8358; 1200</p>
                     </div>
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
+                    <button class="delete">Remove</button>
                 </div>
 
                 <div class="meal">
@@ -240,8 +238,7 @@
                             <h4><b>Spaghetti Chicken</b></h4> 
                             <p>&#8358; 650</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -250,8 +247,7 @@
                             <h4><b>Fufu With Egusi Soup</b></h4> 
                             <p>&#8358; 1100</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -260,8 +256,7 @@
                             <h4><b>Fufu with Eforiro</b></h4> 
                             <p>&#8358; 900</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -270,8 +265,7 @@
                             <h4><b>Spicy Moi Moi</b></h4> 
                             <p>&#8358; 650</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
 
                     <div class="meal">
@@ -280,8 +274,7 @@
                             <h4><b>chicken-sharwama</b></h4> 
                             <p>&#8358; 1300</p>
                         </div>
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
+                        <button class="delete">Remove</button>
                     </div>
             </div>
     </section>
