--- a/menu.html
+++ b/menu.html
@@ -16,14 +16,12 @@
          <header class="headerSection">
                 <h1 class="logo">Buka.ng</h1>
                     <input type="checkbox" id="nav-toggle" class="nav-toggle">
-                <nav>
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Restaurants</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="login.html" id="login">Login</a></li>
-                  </ul>
-                </nav>
+                    <nav>
+                        <ul>
+                          <li><a href="#">My Account</a></li>
+                          <li><a href="index.html" id="login">Logout</a></li>
+                        </ul>
+                      </nav>
                 <label for="nav-toggle" class="nav-toggle-label">
                   <span></span>
                 </label>
